Fix active buttons in dark mode

--- a/style.css
+++ b/style.css
@@ -94,6 +94,13 @@ button {
   background: #e0e0e0;
   box-shadow: inset 7px 7px 15px #c7c7c7, inset -7px -7px 15px #f9f9f9;
 }
+#colorBtn.dark-mode.active,
+#eraserBtn.dark-mode.active {
+  border-radius: 19px;
+  color: #636363;
+  background: #333333;
+  box-shadow: inset 7px 7px 15px #2b2b2b, inset -7px -7px 15px #3b3b3b;
+}
 
 #clearBtn {
   padding: 1.5rem;
@@ -234,4 +241,5 @@ input[type='range']::-webkit-slider-thumb {
     width: 300px;
     height: 300px;
   }
+
 }
